--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         .container {
             text-align: center;
             z-index: 2;
+            margin-top: translateY(-30);
         }
 
         .avatar img {
