--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bio</title>
+    <title>Homa</title>
     <style>
         body {
             margin: 0;
@@ -30,7 +30,7 @@
         .container {
             text-align: center;
             z-index: 2;
-            margin-top: -30px;
+            margin-top: -50px;
         }
 
         .avatar img {
